more alignment fixes

--- a/public/global.css
+++ b/public/global.css
@@ -2,10 +2,11 @@
   --atom-icon-size: 20px;
   --atom-monochrome: none;
 }
-
-.atomIcon {
+.octicon-pencil,
+.atomIcon,
+.atomIcon svg {
   width: var(--atom-icon-size);
-  /*height: var(--atom-icon-size);*/
+  height: var(--atom-icon-size);
   filter: var(--atom-monochrome);
 }
 
@@ -16,11 +17,16 @@
   gap: 8px;
 }
 
+.rgh-quick-file-edit,
 .Box-row > div:first-child {
   display: flex;
   width: auto !important;
 }
 
 .atomIcon.octicon {
-  display: block;
+  display: flex;
+}
+
+.react-directory-filename-column {
+  gap: 16px !important;
 }
